[package]
name = "spam_or_ham"
version = "0.1.0"
authors = ["Michael S. Huang <mhuang74@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.12"
zip = "0.1.18"
rustlearn = "0.4.0"
time = "0.1.35"
